# vehicle-api-lambda

./: Cargo.toml  LICENSE  README.MD  package-lock.json
DB/: vehicle_management.yaml  vehicle_mangement.yaml
documents/csv/: Vehicle Mangement - ACCESS PATTERN.csv  Vehicle Mangement - ENTITY.csv
src/: lib.rs  model.rs
src/model/: history.rs  session.rs  user.rs  vehicle.rs
