[package]
name = "vehicle-management-lambda"
version = "0.1.0"
edition = "2021"
authors = ["Hiron Das <hcdas.09@gamil.com>"]

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[package.metadata.lambda.deploy]
memory = 128
timeout = 3
tracing = "active"
env_file = ".env.production"
role = "arn:aws:iam::637423396664:role/vehicle-management"
runtime = "provided.al2023"

[dependencies]
async-trait = "0.1.83"
aws-config = "1.5.9"
aws-sdk-dynamodb = "1.51.0"
chrono = "0.4.38"
lambda_http = "0.13.0"
pwhash = "1.0.0"
serde = "1.0.213"
serde_json = "1.0.132"

tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
uuid = { version = "1.11.0", features = ["fast-rng", "macro-diagnostics", "v4"] }

[[bin]]
name = "login"
path = "src/bin/login.rs"

[[bin]]
name = "signup"
path = "src/bin/signup.rs"

[[bin]]
name = "delete-session"
path = "src/bin/delete_session.rs"

[[bin]]
name = "change-password"
path = "src/bin/change_password.rs"

[[bin]]
name = "add-vehicle"
path = "src/bin/add_vehicle.rs"

[[bin]]
name = "vehicle"
path = "src/bin/get_vehicles.rs"

[[bin]]
name = "fitness"
path = "src/bin/get_fitness.rs"

[[bin]]
name = "tax"
path = "src/bin/get_tax.rs"

[[bin]]
name = "insurance"
path = "src/bin/get_insurance.rs"

[[bin]]
name = "route"
path = "src/bin/get_route.rs"

[[bin]]
name = "pay-fee"
path = "src/bin/pay_fee.rs"

[[bin]]
name = "update-vehicle"
path = "src/bin/update_vehicle.rs"

[[bin]]
name = "get-history"
path = "src/bin/get_history.rs"

[[bin]]
name = "undo-history"
path = "src/bin/undo_history.rs"
